.deployment/users-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -o .deployment/
    kompose.version: 1.19.0 (f63a961c)
  creationTimestamp: null
  labels:
    io.kompose.service: users
    app: users
    version: v1
  name: users
  namespace: diary
spec:
  replicas: 2
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -o .deployment/
        kompose.version: 1.19.0 (f63a961c)
      creationTimestamp: null
      labels:
        io.kompose.service: users
        app: users
        version: v1
    spec:
      containers:
      - image: rasouza/diary-users
        name: users
        ports:
        - containerPort: 8000
        resources: {}
      restartPolicy: Always
status: {}
