.deployment/users-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: users-ingress
  namespace: diary
  labels:
    app: users
spec:
  rules:
  - http:
      paths:
      - path: /foo
        backend:
          serviceName: users
          servicePort: 80
